--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,13 +10,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Marcos Ferole Dev</title>
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img src="https://github.com/m4rcaoferole.png" alt="Foto de Marcos de camisa preta" />
+        <p>@m4rcaoferole</p>
       </div>
+      <ul>
+        <li>
+          <a href="https://ferole.dev.br" target="_blank">Veja meu Portfólio</a>
+        </li>
+      </ul>
+
+      <div id="social-links">
+        <a href="https://github.com/m4rcaoferole"><ion-icon name="logo-github"></ion-icon> </a>
+
+        <a href="https://instagram.com/m4rcaoferole"><ion-icon name="logo-instagram"></ion-icon></a>
+
+        <a href="https://youtube.com/m4rcaoferole"><ion-icon name="logo-youtube"></ion-icon></a>
+
+        <a href="https://linkedin/in/m4rcaoferole"><ion-icon name="logo-linkedin"></ion-icon></a>
+      </div>
+
+      <footer>created by <a href="#">Marcos Ferole Dev</a></footer>
     </div>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
