--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br" class="">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,6 +18,12 @@
         <img src="https://github.com/m4rcaoferole.png" alt="Foto de Marcos de camisa preta" />
         <p>@m4rcaoferole</p>
       </div>
+
+      <div id="switch">
+        <button></button>
+        <span></span>
+      </div>
+
       <ul>
         <li>
           <a href="https://ferole.dev.br" target="_blank">Veja meu Portfólio</a>
