:ok_hand: ajust container width

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="https://github.com/m4rcaoferole.png" alt="Foto de Marcos de camisa preta" />
+        <img
+          src="https://github.com/m4rcaoferole.png"
+          alt="Foto de Marcos de camisa preta"
+          class=""
+        />
         <p>@m4rcaoferole</p>
       </div>
 
